--- a/requirements.txt
+++ b/requirements.txt
@@ -1,198 +1,9 @@
-absl-py==2.3.1
-accelerate==1.10.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.1
-aiosignal==1.4.0
-alembic==1.17.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.11.0
-asteroid-filterbanks==0.4.0
-asttokens==3.0.0
-attrs==25.4.0
-audioread==3.0.1
-av==16.0.1
-braceexpand==0.1.7
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-cloudpickle==3.1.1
-coloredlogs==15.0.1
-colorlog==6.10.1
-contourpy==1.3.3
-ctranslate2==4.6.0
-cycler==0.12.1
-cytoolz==1.0.1
-datasets==4.2.0
-decorator==5.2.1
-dill==0.4.0
-docopt==0.6.2
-editdistance==0.8.1
-einops==0.8.1
-executing==2.2.1
-faster-whisper==1.2.0
-fiddle==0.3.0
-filelock==3.20.0
-flatbuffers==25.9.23
-fonttools==4.60.1
-frozenlist==1.8.0
-fsspec==2025.9.0
-future==1.0.0
-gitdb==4.0.12
-GitPython==3.1.45
-graphviz==0.21
-grpcio==1.75.1
-h11==0.16.0
-hf-xet==1.1.10
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.35.3
-humanfriendly==10.0
-hydra-core==1.3.2
-HyperPyYAML==1.2.2
-idna==3.11
-indic_numtowords==1.1.0
-inflect==7.5.0
-intervaltree==3.1.0
-ipython==9.6.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.6
-jiwer==3.1.0
-joblib==1.5.2
-julius==0.2.7
-kaldi-python-io==1.2.2
-kiwisolver==1.4.9
-lazy_loader==0.4
-Levenshtein==0.27.1
-lhotse==1.31.1
-libcst==1.8.5
-librosa==0.11.0
-lightning==2.5.5
-lightning-utilities==0.15.2
-lilcom==1.8.1
-llvmlite==0.45.1
-loguru==0.7.3
-Mako==1.3.10
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-marshmallow==4.0.1
-matplotlib==3.10.7
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mediapy==1.1.6
-ml_dtypes==0.5.3
-more-itertools==10.8.0
-mpmath==1.3.0
-msgpack==1.1.2
-multidict==6.7.0
-multiprocess==0.70.16
-nemo-toolkit==2.5.0
-networkx==3.5
-nltk==3.9.2
-num2words==0.5.14
-numba==0.62.1
-numpy==2.3.4
-omegaconf==2.3.0
-onnx==1.19.1
-onnxruntime==1.23.1
-optuna==4.5.0
-packaging==25.0
-pandas==2.3.3
-parso==0.8.5
-peft==0.17.1
-pexpect==4.9.0
-pillow==12.0.0
-plac==1.4.5
-platformdirs==4.5.0
-pooch==1.8.2
-primePy==1.3
-prompt_toolkit==3.0.52
-propcache==0.4.1
-protobuf==6.33.0
-psutil==7.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyannote-core==6.0.1
-pyannote-database==6.1.0
-pyannote-metrics==4.0.0
-pyannote-pipeline==4.0.0
-pyannote.audio==3.1.1
-pyarrow==21.0.0
-pybind11==3.0.1
-pycparser==2.23
-pydantic==2.12.3
-pydantic_core==2.41.4
-pydub==0.25.1
-Pygments==2.19.2
-pyloudnorm==0.1.1
-pyparsing==3.2.5
-python-dateutil==2.9.0.post0
-pytorch-lightning==2.5.5
-pytorch-metric-learning==2.9.0
-pytz==2025.2
-PyYAML==6.0.3
-RapidFuzz==3.14.1
-regex==2025.9.18
-requests==2.32.5
-resampy==0.4.3
-rich==14.2.0
-ruamel.yaml==0.18.15
-ruamel.yaml.clib==0.2.14
-sacremoses==0.1.1
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.2
-seaborn==0.13.2
-semver==3.0.4
-sentencepiece==0.2.1
-sentry-sdk==2.42.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.13.1
-sox==1.5.0
-soxr==1.0.0
-speechbrain==1.0.3
-SQLAlchemy==2.0.44
-stack-data==0.6.3
-sympy==1.14.0
-tabulate==0.9.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.4
-termcolor==3.1.0
-text-unidecode==1.3
-texterrors==0.5.1
-threadpoolctl==3.6.0
-tokenizers==0.22.1
-toolz==1.1.0
-torch==2.9.0
-torch-audiomentations==0.12.0
-torch_pitch_shift==1.2.5
-torchaudio==2.9.0
-torchmetrics==1.8.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.57.1
-typeguard==4.4.4
-typer==0.19.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wandb==0.22.2
-wcwidth==0.2.14
-webdataset==1.0.2
-Werkzeug==3.1.3
-wget==3.2
-whisper_normalizer==0.1.12
-whisperx==3.1.2
-wrapt==1.17.3
-xxhash==3.6.0
-yarl==1.22.0
+pandas
+numpy
+catboost
+scikit-learn
 optuna
+joblib
+streamlit
+plotly
+sqlite3
